# agent-battle-arena

./: .gitignore  .vercel-trigger  AGENTS.md  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
app/: Dockerfile  package-lock.json  package.json
app/src/: agents.ts  orchestrator.ts  server.ts
demo/: run-battle.ts
keys/: deploy.json
programs/arena/: Cargo.toml
programs/arena/src/: lib.rs
scripts/: init-arena-raw.ts  init-arena-v2.ts  init-arena.ts  qa-edge-cases.ts  qa-security.ts  qa-stress-test.ts  register-garra.ts  setup-arena.ts  test-battle.ts  test-betting.ts  test-second-fighter.ts
sdk/: package-lock.json  package.json
sdk/idl/: arena.json
sdk/src/: index.ts
web/: package-lock.json  package.json  tailwind.config.js  vercel.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/battles/: route.ts
web/src/app/api/fighters/: route.ts
web/src/app/api/fighters/register/: route.ts
web/src/app/api/health/: route.ts
web/src/app/api/register/: route.ts
web/src/app/battle/[id]/: page.tsx
web/src/app/battle/live/: page.tsx
web/src/components/: ArenaContext.tsx  WalletProvider.tsx
