[package]
name = "arena"
version = "0.1.0"
description = "Agent Battle Arena - On-chain debate betting protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arena"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
